--- a/snake.yml
+++ b/snake.yml
@@ -1,22 +1,34 @@
-name: Generate Snake Animation
+name: Generate snake animation
+
 on:
-  schedule:
-    - cron: "0 0 * * *" # يعمل يوميًا
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+
+  workflow_dispatch:
+
   push:
-    branches: [main]
+    branches:
+    - main
+
 jobs:
-  generate-snake:
+  generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: Platane/snk@v3
+      - name: generate snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: faresFatooh
-          outputs: |
-            output/snake.svg
-      - uses: crazy-max/ghaction-github-pages@v3
+          github_user_name: ${{ github.repository_owner }}
+          outputs: dist/snake.svg?palette=github-dark
+
+
+      - name: push snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
-          build_dir: output
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
